# inver-synth

./: .flake8  .gitignore  GENERATING.md  INSTALLING.md  Pipfile  README.md  pyproject.toml  requirements-minimal.txt  requirements.txt  runs.txt  vst_generation.md
.github/workflows/: build.yml  pythonpackage.yml
docs/: PerceptionExperiment.md
experiment/: comparison.py
generators/: fm_generator.py  generator.py  parameters.py  sine_generator.py  sound_generator.py  vst_generator.py
models/: a.py  abstract.py  app.py  architectures.py  autoencoder.py  b.py  comparison.py  e2e_cnn.py  generate_dataset.py  runner.py  spectrogram_cnn.py  utils.py
models/common/: architectures.py  data_generator.py  generate_dataset.py  soundfile_generator.py  utils.py
models/saved/: dx7_sample.h5
plugin_config/: dexed.json  dexed_2osc.json  dexed_gen.json  dx2_coarse.json  dx2_fine.json  dx6_coarse.json  dx6_fine.json  lokomotiv.json  lokomotiv_coarse.json  lokomotiv_fine.json  lokomotiv_gen.json
reconstruction/: curves.py  fm_reconstruction.py  mod_oscillators.py
setup_checks/: vst.py
tasks/: start.py
test/: sample_input.npy  test_a.py  test_e2e.py  test_generate_dataset.py  test_spectro.py  test_utils.py
tests/: test_e2e.py  test_spectro.py
