[tool.poetry]
name = "inver-synth"
version = "0.1.0"
description = "A Python implementation of the InverSynth method (Barkan, Tsiris, Koenigstein, Katz)"
authors = ["crodriguez1a <crodriguez1a@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
tensorflow = "^2.2.0"
taskipy = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.0.9"
mypy = "^0.782"
flake8 = "^3.8.3"
autoflake = "^1.3.1"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.taskipy.tasks]
test = "python -m pytest"
lint = "flake8 models/ generators/ test/"
format = "black models/ generators/ test/"
